Cambio grande, retirada de las cards y cambio de las reseñas

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       <div class="heroGrid">
         <div>
           <div class="hKicker">Diseño + Desarrollo</div>
-          <h1>Diseño y construyo experiencias web modernas.</h1>
+          <h1>Hago que lo simple se sienta premium.</h1>
           <p class="sub">
-            Menús digitales, páginas para negocios y sistemas sencillos.
-            Minimalismo, velocidad y una entrega que se siente premium.
+            Me gusta el diseño limpio, pero sobre todo que funcione: rápido, claro y sin vueltas. Si un negocio necesita verse bien y vender mejor, ahí entro yo.
           </p>
 
           <div class="btnRow">
@@ -50,74 +49,66 @@
             <span class="pill">Responsive</span>
           </div>
         </div>
-
-        <aside class="mock" aria-label="Vista previa">
-          <div class="mockTop">
-            <span class="dot"></span><span class="dot"></span><span class="dot"></span>
-          </div>
-
-          <!-- Cambia esta imagen por tu screenshot principal -->
-          <img class="mockImg" src="assets/hero-preview.jpg" alt="Preview del proyecto" />
-
-          <div class="mockHint">
-            Tip: usa un screenshot “limpio” (sin tabs) para que se vea Apple-style.
-          </div>
-        </aside>
       </div>
     </section>
 
     <!-- PROYECTOS -->
     <section class="section" id="proyectos">
-      <div class="centerHead">
-        <div class="eyebrow">Lo más reciente</div>
-        <h2>Proyectos destacados</h2>
-        <p>Una selección corta, pero con impacto. Demos, código y casos.</p>
+      <div class="timeline">
+        <div class="tItem"
+          tabindex="0"
+          data-title="Menú digital para restaurante"
+          data-desc="Quería que un restaurante pudiera verse moderno sin depender de apps. Algo rápido, claro y que simplemente funcionara."
+          data-demo="#"
+          data-code="#">
+          <div class="tDot"></div>
+          <div class="tContent">
+            <div class="tTop">
+              <h3>Menú digital para restaurante</h3>
+              <span class="tMeta">2025 · Proyecto personal</span>
+            </div>
+            <div class="tReason">
+              Decisión: simple primero, estética después.
+            </div>
+            <p>
+              Quería que un restaurante pudiera verse moderno sin depender de apps.
+              Algo rápido, claro y que simplemente funcionara.
+            </p>
+            <div class="tLinks">
+              <a href="#" target="_blank" rel="noopener">Demo</a>
+              <span>·</span>
+              <a href="#" target="_blank" rel="noopener">Código</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="tItem"
+          tabindex="0"
+          data-title="Landing page para negocio"
+          data-desc="Pensado para negocios pequeños que necesitan explicar bien qué hacen y convertir visitas en mensajes reales."
+          data-demo="#"
+          data-code="#">
+          <div class="tDot"></div>
+          <div class="tContent">
+            <div class="tTop">
+              <h3>Landing page para negocio</h3>
+              <span class="tMeta">2025 · Proyecto personal</span>
+            </div>
+            <div class="tReason">
+              Objetivo: claridad, no ruido.
+            </div>
+            <p>
+              Pensado para negocios pequeños que necesitan explicar bien qué hacen
+              y convertir visitas en mensajes reales.
+            </p>
+            <div class="tLinks">
+              <a href="#" target="_blank" rel="noopener">Demo</a>
+              <span>·</span>
+              <a href="#" target="_blank" rel="noopener">Código</a>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <!-- Proyecto 1 -->
-      <article class="projectCard">
-        <img class="shot" src="assets/project-1.jpg" alt="Screenshot del proyecto 1" />
-        <div class="projectBody">
-          <div>
-            <h3>Menú digital para restaurante</h3>
-            <p>
-              Menú rápido, elegante y listo para QR. Ideal para restaurantes que quieren verse
-              modernos sin depender de apps.
-            </p>
-            <div class="meta">
-              <span>Responsive</span> • <span>HTML/CSS/JS</span> • <span>Optimizado</span>
-            </div>
-          </div>
-
-          <div class="projActions">
-            <a class="link" href="#" target="_blank" rel="noopener">Ver demo</a>
-            <a class="link secondary" href="#" target="_blank" rel="noopener">Ver código</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Proyecto 2 -->
-      <article class="projectCard">
-        <img class="shot" src="assets/project-2.jpg" alt="Screenshot del proyecto 2" />
-        <div class="projectBody">
-          <div>
-            <h3>Landing page para negocio</h3>
-            <p>
-              Página clara con secciones y CTA para convertir visitas en mensajes.
-              Perfecta para servicios locales.
-            </p>
-            <div class="meta">
-              <span>SEO básico</span> • <span>Velocidad</span> • <span>Diseño limpio</span>
-            </div>
-          </div>
-
-          <div class="projActions">
-            <a class="link" href="#" target="_blank" rel="noopener">Ver demo</a>
-            <a class="link secondary" href="#" target="_blank" rel="noopener">Ver código</a>
-          </div>
-        </div>
-      </article>
-    </section>
 
     <!-- TESTIMONIOS -->
     <section class="section" id="testimonios">
@@ -127,29 +118,7 @@
         <p>Cuando tengas clientes, aquí se vuelve tu sección más poderosa.</p>
       </div>
 
-      <div class="tGrid">
-        <div class="tCard">
-          <p>
-            “Entrega rápida y diseño muy limpio. Se notó el cuidado en cada detalle.”
-          </p>
-          <strong>Nombre Apellido</strong>
-          <span>Cliente — Restaurante</span>
-        </div>
-        <div class="tCard">
-          <p>
-            “Entendió exactamente lo que necesitábamos y lo dejó funcionando sin complicaciones.”
-          </p>
-          <strong>Nombre Apellido</strong>
-          <span>Cliente — Negocio local</span>
-        </div>
-        <div class="tCard">
-          <p>
-            “Comunicación clara, avances constantes y resultado final profesional.”
-          </p>
-          <strong>Nombre Apellido</strong>
-          <span>Cliente — Servicio</span>
-        </div>
-      </div>
+     
     </section>
 
     <!-- CTA FINAL -->
@@ -172,8 +141,22 @@
 
   </div>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <div class="modal" id="modal" aria-hidden="true">
+    <div class="modalBackdrop" data-close></div>
+
+    <div class="modalBox" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <button class="modalClose" type="button" aria-label="Cerrar" data-close>✕</button>
+
+      <h3 id="modalTitle"></h3>
+      <p id="modalDesc"></p>
+
+      <div class="modalActions">
+        <a id="modalDemo" class="modalBtn primary" href="#" target="_blank" rel="noopener">Ver demo</a>
+        <a id="modalCode" class="modalBtn" href="#" target="_blank" rel="noopener">Ver código</a>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
