--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <!-- HERO -->
-    <section class="hero" id="inicio">
+    <section class="hero reveal" id="inicio">
       <div class="heroGrid">
         <div>
           <div class="hKicker">Diseño + Desarrollo</div>
@@ -53,9 +53,9 @@
     </section>
 
     <!-- PROYECTOS -->
-    <section class="section" id="proyectos">
+    <section class="section reveal" id="proyectos">
       <div class="timeline">
-        <div class="tItem"
+        <div class="tItem reveal"
           tabindex="0"
           data-title="Menú digital para restaurante"
           data-desc="Quería que un restaurante pudiera verse moderno sin depender de apps. Algo rápido, claro y que simplemente funcionara."
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="tItem"
+        <div class="tItem reveal"
           tabindex="0"
           data-title="Landing page para negocio"
           data-desc="Pensado para negocios pequeños que necesitan explicar bien qué hacen y convertir visitas en mensajes reales."
@@ -122,7 +122,7 @@
     </section>
 
     <!-- CTA FINAL -->
-    <section class="section" id="contacto">
+    <section class="section reveal" id="contacto">
       <div class="cta">
         <h2>¿Tienes un proyecto o producto que quieras platicar?</h2>
         <p>Envíame un mensaje y te respondo con propuesta y tiempos.</p>
